2003-02-21  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* cleaned the default project/configuration search
	* fixed Mac OS X default project/configuration file names

2003-02-21  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* fix bug "[690449] osc~ help patcher does not define $w" submitted by etienne (edelefile) on sourceforge

2003-02-20  Patrice Tisserand <Patrice.Tisserand@ircam.fr>

	* add fts_file_find_in_env function (find a file in paths defined by the contains of an environment variable

	* move fts_file_find_in_path declaration from jmax/ftsprivate/file.h to jmax/include/fts/file.h (this function is now public)

2003-02-20  Norbert Schnell  <schnell@mac-schnell2.ircam.fr>

	* fixed MacOS X MIDI input (no more delay!)
	* fixed ugly bug in patcher data (inversed arguments in fts_heap_free when destroying)
	* reimplemented midiconfig listener with fts_objectlist_t (removed fake variable in root patcher)

2003-02-19  Olivier Chapuis  <olivier.chapuis@free.fr>

	* packages/alsa/c/src/alsaaudioport.c
	(alsaaudioport_open_input):
	(alsaaudioport_open_output):
	(alsastream_open):
	Closed the pcm if an error occur. Do not log error msg when the null
	plugin is used

	* packages/alsa/c/src/alsaaudiomanager.c
	(alsaaudiomanager_get_channels_max): 
	Closed the pcm handle if we cannot get the hw config
	
2003-02-18  Patrice Tisserand <Patrice.Tisserand@ircam.fr>

	* add a popup "Open File" DialogBox if readsf/writesf object receive open message 
	without argument

2003-02-17  Patrice Tisserand <Patrice.Tisserand@ircam.fr>

	* udpsend now use fts_binary_protocol for message encoding
	
	* udpsend now use a fts_udpstream_t instead of his own udp socket implementation.
	
	* add disconnect support for udpin/udpout objects
	
	* add disconnect function for fts_udpstream_t

	* change constructor in fts_udpstream_t (only connected if 2 argument are given)
	
	* add enconding functions for binary protocol
	
	* add udpin and udpout object (jmax/packages/io/c/src/udp.c).